# simplemc

./: .clang-format  .gitignore  CMakeLists.txt  README.md  RUST_GREENFIELD_PLAN.md  RUST_GREENFIELD_PROGRESS.md  RUST_GREENFIELD_REVIEW_JUN19.md  RUST_PORT_PLAN.md  RUST_PORT_PROGRESS.md  plan-fable-review.md  plan-result-sink.md  plan-self-energy-diagmc.md  plan-update-statistics.md
doc/: CMakeLists.txt  ChangeLog.md  Doxyfile.in  Doxyfile.in.bak  DoxygenLayout.xml  documentation.md  groups.dox  installation.md  integration.md  issues.md  notes_on_statistical_quantities.md  overview.md.in  tut_accs_1.md  tut_grids_1.md  tut_grids_2.md  tut_mc_1.md  tut_mc_2.md  tut_mc_3.md  tut_mpi_1.md  tut_mpi_2.md  tut_mpi_3.md  tut_mpi_4.md  tut_mpi_5.md  tut_numeric_1.md  tut_numeric_2.md  tut_random_1.md  tut_utils_1.md  tut_utils_2.md  tut_utils_3.md  tutorial1.md  tutorials.md
examples/: CMakeLists.txt
examples/accs/: CMakeLists.txt  doc_autocorr_acc.cpp  doc_batch_acc.cpp  doc_block_acc.cpp  doc_covar_acc_cplx.cpp  doc_covar_acc_dbl.cpp  doc_mean_acc.cpp  doc_multivalue_acc.cpp  doc_var_acc_cplx.cpp  doc_var_acc_dbl.cpp
examples/grids/: CMakeLists.txt  doc_custom_grid.cpp  doc_linear_grid.cpp  doc_nd_grid.cpp  doc_power_grid.cpp  doc_print_grids.cpp  doc_symmetric_power_grid.cpp
examples/mc/: CMakeLists.txt  doc_mc_checkpoint.cpp  doc_mc_modular.cpp  doc_mc_simulation.cpp
examples/mpi/: CMakeLists.txt  doc_coll_comm_bcast.cpp  doc_coll_comm_gather.cpp  doc_coll_comm_other.cpp  doc_coll_comm_reduce.cpp  doc_coll_comm_scatter.cpp  doc_mpi_hello_world.cpp
examples/numeric/: CMakeLists.txt  doc_cubic_splines.cpp  doc_lattices.cpp  doc_linear_interpolation_1d.cpp  doc_linear_interpolation_nd.cpp  doc_polynomial_interpolation_1d.cpp  doc_polynomial_interpolation_nd.cpp  doc_quadrature.cpp
examples/random/: CMakeLists.txt  doc_rngs.cpp  doc_samples.cpp  doc_splitmix64.cpp  doc_xoshiro256.cpp
examples/serialize/: CMakeLists.txt
examples/tutorials/: CMakeLists.txt  tut_accs_1.cpp  tut_grids_1.cpp  tut_grids_2.cpp  tut_mc_1.cpp  tut_mc_2.cpp  tut_mc_3.cpp  tut_mpi_1.cpp  tut_mpi_2_1.cpp  tut_mpi_2_2.cpp  tut_mpi_2_3.cpp  tut_mpi_2_4.cpp  tut_mpi_2_5.cpp  tut_mpi_2_6.cpp  tut_mpi_3.cpp  tut_mpi_4.cpp  tut_mpi_5.cpp  tut_numeric_1.cpp  tut_numeric_2.cpp  tut_random_1.cpp  tut_utils_1.cpp  tut_utils_2.cpp  tut_utils_3.cpp
examples/utils/: CMakeLists.txt  doc_exceptions.cpp  doc_file_io.cpp
rust/: .gitignore  Cargo.toml  Makefile  input.json
rust/benches/: hot_path.rs
rust/examples/: ising_2d.rs  random_walk.rs
rust/results/: config.json  fft.json  manifest.json  selfenergy.json  selfenergy_exact.json  summary.json  summary.txt
rust/src/: lib.rs  merge.rs
rust/tests/: ising_validation.rs  mc_measurement_set.rs  mc_named_set.rs  mc_parallel.rs  mc_run.rs  mc_stateful.rs  mc_update_set.rs  mc_wrappers.rs  random_samples.rs  random_seed_source.rs
src/: CMakeLists.txt  config.h.in  config.hpp.in
src/accs/: CMakeLists.txt  mean_acc.cpp  utils.cpp  var_acc.cpp
src/grids/: CMakeLists.txt  grid_base.cpp  linear_grid.cpp  power_grid.cpp  symmetric_power_grid.cpp
src/json/: CMakeLists.txt  file_io.cpp
src/mc/: CMakeLists.txt
src/mpi/: CMakeLists.txt  communicator.cpp  datatype.cpp  environment.cpp  group.cpp  utils.cpp
src/numeric/: CMakeLists.txt  bravais_lattice.cpp  bravais_lattice_1d.cpp  bravais_lattice_2d.cpp  bravais_lattice_3d.cpp  chebyshev_polynomial.cpp  hermite_polynomial.cpp  laguerre_polynomial.cpp  legendre_polynomial.cpp  linear_interpolation.cpp  linear_map.cpp  orthogonal_polynomials.cpp  trigonometric_polynomial.cpp  utils.cpp
src/random/: CMakeLists.txt  splitmix64.cpp  uniform_real_distribution.cpp  xoshiro256.cpp
src/serialization/: CMakeLists.txt
src/serialize/: CMakeLists.txt
src/utils/: CMakeLists.txt  file_io.cpp  generic_error.cpp
tests/: CMakeLists.txt  gtest-mpi-listener.hpp  test_utils.cpp  test_utils.hpp  tmp_mpi_test.cpp  tmp_test.cpp
tests/accs/: CMakeLists.txt  accs_batch_acc_advanced_test.cpp  accs_batch_acc_test.cpp  accs_covar_acc_advanced_test.cpp  accs_covar_acc_test.cpp  accs_fixture.hpp  accs_fixture_advanced.hpp  accs_jackknife_test.cpp  accs_mean_acc_advanced_test.cpp  accs_mean_acc_test.cpp  accs_mpi_advanced_test.cpp  accs_mpi_test.cpp  accs_test.cpp  accs_test_traits.hpp  accs_utils_advanced_test.cpp  accs_utils_test.cpp  accs_var_acc_advanced_test.cpp  accs_var_acc_test.cpp  stochastic_process.hpp  telegraph_process.hpp
tests/grids/: CMakeLists.txt  grids_1d_test.cpp  grids_iterator_test.cpp  grids_nd_test.cpp  grids_test.cpp
tests/json/: CMakeLists.txt  json_test.cpp
tests/mc/: CMakeLists.txt  callbacks_test.cpp  checkpoint_test.cpp  input_config_test.cpp  kernel_test.cpp  mc_checkpoint_test.cpp  mc_input_config_test.cpp  mc_kernel_test.cpp  mc_measurement_set_test.cpp  mc_measurement_test.cpp  mc_metropolis_kernel_test.cpp  mc_mpi_test.cpp  mc_progress_printer_test.cpp  mc_run_test.cpp  mc_stats_and_params_test.cpp  mc_test_utils.hpp  mc_tuple_set_test.cpp  mc_update_set_test.cpp  mc_update_test.cpp  measurement_set_test.cpp  measurement_test.cpp  metropolis_kernel_test.cpp  mixed_backend_test.cpp  run_test.cpp  simulation_input_config_test.cpp  simulation_mixed_backend_test.cpp  simulation_run_test.cpp  simulation_test.cpp  stats_and_params_test.cpp  tuple_set_test.cpp  update_set_test.cpp  update_test.cpp
tests/mpi/: CMakeLists.txt  abort_exception_test.cpp  env_comm_test.cpp  mpi_abort_exception_test.cpp  mpi_allequal_test.cpp  mpi_allgather_test.cpp  mpi_allgatherv_test.cpp  mpi_allreduce_test.cpp  mpi_broadcast_test.cpp  mpi_collectives_test.cpp  mpi_comm_test.cpp  mpi_datatype_test.cpp  mpi_datatypes_test.cpp  mpi_env_comm_test.cpp  mpi_env_test.cpp  mpi_gather_test.cpp  mpi_gatherv_test.cpp  mpi_group_test.cpp  mpi_no_abort_exception_test.cpp  mpi_print_test.cpp  mpi_reduce_test.cpp  mpi_scatter_test.cpp  mpi_scatterv_test.cpp  mpi_test.cpp  mpi_threading_test.cpp  mpi_type_test.cpp  mpi_utils_test.cpp  no_abort_exception_test.cpp  simplemcmpi_fixture.hpp
tests/numeric/: CMakeLists.txt  (+9 more)
(+274 files in other folders)
